Fixing small UI bug where the recipe details was set at a specific height, causing overflow.

--- a/app/components/Molecules/RecipeCard/RecipeCard.module.css
+++ b/app/components/Molecules/RecipeCard/RecipeCard.module.css
@@ -26,7 +26,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  height: 100%;
+  min-height: 100%;
   color: var(--white);
   justify-content: center;
   align-items: center;
